--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
   },
   "dependencies": {
     "expo": "^33.0.0",
+    "expo-constants": "^5.0.1",
+    "lodash": "^4.17.14",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
     "react-native-web": "^0.11.4",
-    "react-router-native": "^5.0.1"
+    "react-router-native": "^5.0.1",
+    "rn-prompt": "^1.0.4"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.1.1"
