--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "expo": "^33.0.0",
     "expo-constants": "^5.0.1",
+    "expo-haptics": "^5.0.1",
     "lodash": "^4.17.14",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
