--- a/app.json
+++ b/app.json
@@ -2,7 +2,8 @@
   "expo": {
     "name": "Knave RPG Spellbook",
     "slug": "knave-rpg-spellbook",
-    "privacy": "public",
+    "description": "A simple spellbook app for the Knave RPG system.",
+    "privacy": "unlisted",
     "sdkVersion": "33.0.0",
     "platforms": [
       "ios",
@@ -15,7 +16,7 @@
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#222222"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
@@ -25,6 +26,9 @@
     ],
     "ios": {
       "supportsTablet": true
+    },
+    "android": {
+      "package": "com.jet4rpgs.knaverpgspellbook"
     }
   }
 }
