--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
     "react-native-web": "^0.11.4",
+    "react-redux": "^7.1.0",
     "react-router-native": "^5.0.1",
+    "redux": "^4.0.4",
+    "redux-persist": "^5.10.0",
     "rn-prompt": "^1.0.4"
   },
   "devDependencies": {
