--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "name": "Knave Spellbook",
     "slug": "knave-rpg-spellbook",
     "description": "A simple spellbook app for the Knave RPG system.",
-    "privacy": "unlisted",
+    "privacy": "public",
     "sdkVersion": "33.0.0",
     "platforms": [
       "ios",
